# Deep-Agents-Live

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  make.ps1  skills-lock.json
backend/: Dockerfile  log_config.dev.json  pyproject.toml
backend/app/: __init__.py  config.py  env_loader.py  env_resolver.py  exceptions.py  logging_config.py  main.py  paths.py
backend/scripts/: check_api.py  check_neo4j.py  check_rag_search.py  index_knowledge_base.py  request_chat.py  upload_langfuse_dataset.py
backend/tests/: conftest.py  test_admin_reindex.py  test_chat_json.py  test_chat_stream.py  test_chunking.py  test_config.py  test_config_id.py  test_config_registry.py  test_embeddings_fallback.py  test_env_resolver.py  test_graph_catalog_kg_writer.py  test_graph_client.py  test_graph_cypher_file.py  test_graph_entity_resolver.py  test_graph_extraction_schema.py  test_graph_section_splitter.py  test_graph_theme_baseline.py  test_health.py  test_index_cli.py  test_index_pipeline.py  test_langfuse_integration.py  test_logging_config.py  test_openrouter_errors.py  test_pdf_text.py  test_prompt_resolver.py  test_qdrant_url.py  test_rag_manifest.py  test_rag_startup.py  test_retriever_factory.py  test_retriever_reranker.py  test_retriever_rrf.py  test_retriever_run_config.py  test_search_knowledge_base.py  test_sparse_embed.py  test_tools.py
comparison/: README.md  _handoff.md  comparison.ipynb  comparison.py  corpus.py  docker-compose.yml  helpers.py  make_u.ps1  pyproject.toml
comparison/.ipynb_checkpoints/: comparison-checkpoint.ipynb
evals/: Makefile  README.md  pyproject.toml
evals/configs/: baseline-react-inmemory.yaml  benchmark-high-temp.yaml  candidate-gpt-oss-120b-v001.yaml  candidate-gpt4o-v001.yaml  candidate-kb-alignment-search-fallback-v001.yaml  candidate-kb-alignment-v001.yaml  candidate-search-fallback-prompt.yaml  candidate-search-first-prompt.yaml  graphrag-baseline.yaml  graphrag-v001.yaml  vector-db-baseline.yaml
evals/reports/: analysis-baseline-react-inmemory--e2e-qa--5eedd7a1--20260615T191628Z.md  analysis-candidate-gpt-oss-120b-v001--e2e-e2e-qa----20260617T175047Z.md  analysis-candidate-gpt4o-v001--e2e-e2e-qa----20260617T180704Z.md  analysis-candidate-gpt4o-v001--e2e-e2e-qa--aa4dbe86--20260617T173842Z.md  analysis-candidate-kb-alignment-search-fallback-v001--e2e-e2e-qa--5eedd7a1--20260615T215253Z.md  analysis-candidate-kb-alignment-v001--e2e-qa--5eedd7a1--20260615T203122Z.md  analysis-candidate-search-fallback-prompt--e2e-e2e-qa--5eedd7a1--20260615T214115Z.md  analysis-candidate-search-fallback-prompt--e2e-qa--5eedd7a1--20260615T195243Z.md  analysis-candidate-search-first-prompt--e2e-qa--5eedd7a1--20260615T194334Z.md  analysis-graphrag-baseline--graphrag-global--de7accbf--20260628T161845Z.md  analysis-graphrag-baseline--graphrag-multi-hop--de7accbf--20260628T161516Z.md  analysis-vector-db-baseline--e2e-e2e-qa--db18d394--20260626T184758Z.md  baseline-e2e-qa-v001.md  baseline-react-inmemory--behavior-funnel-to-lead--5eedd7a1--20260615T221013Z.txt  baseline-react-inmemory--e2e-e2e-qa--aa4dbe86--20260617T171043Z.txt  baseline-react-inmemory--e2e-e2e-qa--aa4dbe86--20260617T172234Z.txt  baseline-react-inmemory--e2e-e2e-qa--aa4dbe86--20260617T192740Z.txt  baseline-react-inmemory--e2e-e2e-qa--aa4dbe86--20260617T193438Z.txt  baseline-react-inmemory--e2e-qa--5eedd7a1--20260615T182420Z.txt  baseline-react-inmemory--e2e-qa--5eedd7a1--20260615T185733Z.txt  baseline-react-inmemory--e2e-qa--5eedd7a1--20260615T191512Z.txt  baseline-react-inmemory--e2e-qa--5eedd7a1--20260615T191628Z.txt  baseline-react-inmemory--rag-rag-format-facts----20260615T210610Z.txt  baseline-react-inmemory--rag-rag-format-facts--5eedd7a1--20260615T210735Z.txt  candidate-gpt-oss-120b-v001--e2e-e2e-qa----20260617T175047Z.txt  candidate-gpt-oss-120b-v001--e2e-e2e-qa----20260617T194140Z.txt  candidate-gpt-oss-120b-v001--e2e-e2e-qa--aa4dbe86--20260617T200251Z.txt  candidate-gpt4o-v001--e2e-e2e-qa----20260617T180704Z.txt  candidate-gpt4o-v001--e2e-e2e-qa--aa4dbe86--20260617T173842Z.txt  candidate-gpt4o-v001--e2e-e2e-qa--aa4dbe86--20260617T174448Z.txt  candidate-kb-alignment-search-fallback-v001--e2e-e2e-qa--5eedd7a1--20260615T215253Z.txt  candidate-kb-alignment-search-fallback-v001--e2e-e2e-qa--5eedd7a1--20260615T215724Z.txt  candidate-kb-alignment-v001--e2e-qa--5eedd7a1--20260615T202246Z.txt  candidate-kb-alignment-v001--e2e-qa--5eedd7a1--20260615T202439Z.txt  candidate-kb-alignment-v001--e2e-qa--5eedd7a1--20260615T203122Z.txt  candidate-search-fallback-prompt--e2e-e2e-qa--5eedd7a1--20260615T214115Z.txt  candidate-search-fallback-prompt--e2e-e2e-qa--aa4dbe86--20260617T185201Z.txt  candidate-search-fallback-prompt--e2e-qa--5eedd7a1--20260615T195243Z.txt  candidate-search-first-prompt--e2e-qa--5eedd7a1--20260615T194122Z.txt  candidate-search-first-prompt--e2e-qa--5eedd7a1--20260615T194334Z.txt  (+38 more)
evals/scripts/: analyze_run.py  build_dataset.py  build_e2e_qa_manifest.py  build_funnel_to_lead_manifest.py  build_graphrag_baseline_report.py  build_graphrag_manifest.py  build_objections_trust_manifest.py  build_out_of_catalog_manifest.py  build_rag_format_manifest.py  build_rag_product_manifest.py  build_segment_routing_manifest.py  compare_runs.py  dataset_registry.py  emit_error_items.py  env_loader.py  error_taxonomy.py  evaluators.py  models.py  ragas_compat.py  run_experiment.py  run_graphrag_baseline_local.py  sync_datasets.py  user_simulation.py
evals/tests/: conftest.py  test_analyze_run.py  test_config_registry.py  test_dataset_integrity.py  test_dataset_registry.py  test_emit_error_items.py  test_env_loader.py  test_error_taxonomy.py  test_evaluators.py  test_funnel_to_lead_integrity.py  test_graphrag_integrity.py  test_langfuse_dataset_name.py  test_objections_trust_integrity.py  test_out_of_catalog_integrity.py  test_rag_format_integrity.py  test_rag_product_integrity.py  test_run_experiment.py  test_segment_routing_integrity.py  test_smoke.py  test_user_simulation.py
frontend/bot/: Dockerfile  config.py  core_client.py  formatters.py  main.py  models.py  (+5 more)
(+325 files in other folders)
