[project]
name = "backend"
version = "0.1.0"
description = "Deep-Agents-Live Agent Core (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.7.1",
    "langgraph>=1.2.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
    "types-PyYAML>=6.0.12.20250915",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D203",
    "D213",
    "COM812",
    "ISC001",
    "S104",
    "RUF001",
    "PLW0603",
    "ANN401",
    "PERF401",
    "SIM108",
    "TC003",
    "TC002",
    "PLR0911",
    "PLR0913",
    "C901",
    "PLR0912",
]

[tool.ruff.lint.extend-per-file-ignores]
"app/integrations/openrouter.py" = ["BLE001"]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["T201", "PLR2004", "INP001", "TRY003", "EM102", "B007", "S607"]
"tests/**/*.py" = ["S101", "PLR2004", "PLC0415", "ARG001", "ANN001", "ANN202"]
"app/api/routers/chat.py" = ["ANN202", "ANN001"]
"app/integrations/langfuse.py" = ["PLC0415", "S310"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["app"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["langchain_openai.*", "langfuse.*", "langgraph.*", "langchain_core.*"]
ignore_missing_imports = true
disable_error_code = ["call-arg", "call-overload"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
